pytorch_experiments/slurm-9581474_2.out
  File "/home/slurm/slurmd/job9581476/slurm_script", line 65
    raise ValueError(f'The SLURM_ARRAY_TASK_ID = {satid} is illegal. Start your job at 1 please.')
                                                                                                ^
SyntaxError: invalid syntax
